<package format="3">
  <name>conditional_deps</name>
  <version>0.0.1</version>
  <description>
    A package to test conditional dependencies.
  </description>

  <maintainer email="logans@cottsay.net">Scott K Logan</maintainer>
  <license>Apache License 2.0</license>

  <url>http://github.com/cottsay/conditional_deps</url>
  <author>Scott K Logan</author>

  <buildtool_depend>ament_cmake_core</buildtool_depend>

  <build_depend condition="0 == 1">bad_build_depend</build_depend>
  <build_depend condition="1 == 1">good_build_depend</build_depend>
  <build_export_depend condition="0 == 1">bad_build_export_depend</build_export_depend>
  <build_export_depend condition="1 == 1">good_build_export_depend</build_export_depend>
  <buildtool_depend condition="0 == 1">bad_buildtool_depend</buildtool_depend>
  <buildtool_depend condition="1 == 1">good_buildtool_depend</buildtool_depend>
  <buildtool_export_depend condition="0 == 1">bad_buildtool_export_depend</buildtool_export_depend>
  <buildtool_export_depend condition="1 == 1">good_buildtool_export_depend</buildtool_export_depend>
  <exec_depend condition="0 == 1">bad_exec_depend</exec_depend>
  <exec_depend condition="1 == 1">good_exec_depend</exec_depend>
  <doc_depend condition="0 == 1">bad_doc_depend</doc_depend>
  <doc_depend condition="1 == 1">good_doc_depend</doc_depend>
  <test_depend condition="0 == 1">bad_test_depend</test_depend>
  <test_depend condition="1 == 1">good_test_depend</test_depend>
  <!--<conflict condition="0 == 1">bad_conflict</conflict>-->
  <conflict condition="1 == 1">good_conflict</conflict>
  <!--<replace condition="0 == 1">bad_replace</replace>-->
  <replace condition="1 == 1">good_replace</replace>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
